NewArchive/81d94630b02d222265209126c50b297c-a73d80d9462cfb550c0755cfd96ceec5/output
+ clang++ -std=c++1y -O3 -Wall -pthread main.cpp
main.cpp:30:5: error: static_assert failed "!"
    static_assert(commonBaseClass<X, Y, Z, W>(), "!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
